four day:update some bug, add essay.html

--- a/class_work/index.html
+++ b/class_work/index.html
@@ -30,7 +30,8 @@
         <div>
         <ul class="nav navbar-nav">
             <li class="active"><a href="./index.html">主页</a></li>
-            <li><a href="./my_submit.html">关于我</a></li>
+            <li><a href="./jianli.html">关于我</a></li>
+            <li><a href="ftp://115.159.58.102/">资料下载</a></li>
         </ul>
         <div class="navbar-right navbar-form">
         <button class="btn btn-group btn-primary btn-black">注册</button>
@@ -135,7 +136,7 @@
            
     <div class="row">
         <div class="col-md-8">
-        <a href="#" class="my_a_head">
+        <a href="./essay.html" class="my_a_head">
         <div class="well my_well">
            <span class="label label-primary my_magin_label">编程</span>
            <span class="label label-danger my_magin_label">高并发</span>
@@ -252,6 +253,8 @@
                 Powered by: <a href="http://www.bootcss.com/">Bootstrap</a> <a href="http://glyphicons.com/">Glyphicons Halflings</a>
                 <br>
                 Copyright © 2017-2018
+                <br>
+                <script charset="Shift_JIS" src="http://chabudai.sakura.ne.jp/blogparts/honehoneclock/honehone_clock_wh.js"></script>
             </p>
         </div>
     </div>
