--- a/class_work/jianli.html
+++ b/class_work/jianli.html
@@ -34,7 +34,8 @@
             <div>
             <ul class="nav navbar-nav">
                 <li><a href="./index.html">主页</a></li>
-                <li class="active"><a href="./my_submit.html">关于我</a></li>
+                <li class="active"><a href="./jianli.html">关于我</a></li>
+                <li><a href="ftp://115.159.58.102/">资料下载</a></li>
             </ul>
             <div class="navbar-right navbar-form">
             <button class="btn btn-group btn-primary btn-black">注册</button>
