--- a/class_work/login.html
+++ b/class_work/login.html
@@ -31,10 +31,11 @@
         <div>
         <ul class="nav navbar-nav">
             <li class=""><a href="./index.html">主页</a></li>
-            <li><a href="./my_submit.html">关于我</a></li>
+            <li><a href="./jianli.html">关于我</a></li>
+            <li><a href="ftp://115.159.58.102/">资料下载</a></li>
         </ul>
         <div class="navbar-right navbar-form">
-        <button class="btn btn-group btn-primary btn-black">注册</button>
+        <a href="./register.html" class="btn btn-group btn-primary btn-black">注册</a>
         </div>
         <div class="navbar-right navbar-form">
         <a href="login.html" class="btn btn-group btn-primary btn-black">登陆</a>
