--- a/class_work/register.html
+++ b/class_work/register.html
@@ -31,7 +31,8 @@
         <div>
         <ul class="nav navbar-nav">
             <li class=""><a href="./index.html">主页</a></li>
-            <li><a href="./my_submit.html">关于我</a></li>
+            <li><a href="./jianli.html">关于我</a></li>
+            <li><a href="ftp://115.159.58.102/">资料下载</a></li>
         </ul>
         <div class="navbar-right navbar-form">
         <button class="btn btn-group btn-primary btn-black">注册</button>
