five day:update messageboard.html

--- a/class_work/register.html
+++ b/class_work/register.html
@@ -33,6 +33,7 @@
             <li class=""><a href="./index.html">主页</a></li>
             <li><a href="./jianli.html">关于我</a></li>
             <li><a href="ftp://115.159.58.102/">资料下载</a></li>
+            <li><a href="./messageboard.html">留言板</a></li>
         </ul>
         <div class="navbar-right navbar-form">
         <button class="btn btn-group btn-primary btn-black">注册</button>
