--- a/class_work/jianli.html
+++ b/class_work/jianli.html
@@ -35,7 +35,9 @@
             <ul class="nav navbar-nav">
                 <li><a href="./index.html">主页</a></li>
                 <li class="active"><a href="./jianli.html">关于我</a></li>
-                <li><a href="ftp://115.159.58.102/">资料下载</a></li>
+                <li><a href="ftp://115.159.58.102/">资料下载</a>
+                </li>
+                <li><a href="./messageboard.html">留言板</a></li>
             </ul>
             <div class="navbar-right navbar-form">
             <button class="btn btn-group btn-primary btn-black">注册</button>
