six day:update some bugs, add webserver.html

--- a/class_work/jianli.html
+++ b/class_work/jianli.html
@@ -38,9 +38,10 @@
                 <li><a href="ftp://115.159.58.102/">资料下载</a>
                 </li>
                 <li><a href="./messageboard.html">留言板</a></li>
+                <li><a href="webserver.html">后台开发</a></li>
             </ul>
             <div class="navbar-right navbar-form">
-            <button class="btn btn-group btn-primary btn-black">注册</button>
+            <a href="./register.html" class="btn btn-group btn-primary btn-black">注册</a>
             </div>
             <div class="navbar-right navbar-form">
             <a href="login.html" class="btn btn-group btn-primary btn-black">登陆</a>
@@ -193,6 +194,9 @@
                 
             </div>
             <div class="col-md-4">
+               <div class="well my_well">
+        <script charset="Shift_JIS" src="http://chabudai.sakura.ne.jp/blogparts/honehoneclock/honehone_clock_wh.js"></script>
+        </div>s
                 <div class="well my_well_submit">
                     <h4>基本资料:</h4>
                     <hr>
