--- a/class_work/essay.html
+++ b/class_work/essay.html
@@ -29,10 +29,11 @@
         </div>
         <div>
         <ul class="nav navbar-nav">
-            <li class="active"><a href="./index.html">主页</a></li>
+            <li><a href="./index.html">主页</a></li>
             <li><a href="./jianli.html">关于我</a></li>
             <li><a href="ftp://115.159.58.102/">资料下载</a></li>
             <li><a href="./messageboard.html">留言板</a></li>
+            <li><a href="webserver.html">后台开发</a></li>
         </ul>
         <div class="navbar-right navbar-form">
         <button class="btn btn-group btn-primary btn-black">注册</button>
