--- a/class_work/index.html
+++ b/class_work/index.html
@@ -33,9 +33,10 @@
             <li><a href="./jianli.html">关于我</a></li>
             <li><a href="ftp://115.159.58.102/">资料下载</a></li>
             <li><a href="./messageboard.html">留言板</a></li>
+            <li><a href="webserver.html">后台开发</a></li>
         </ul>
         <div class="navbar-right navbar-form">
-        <button class="btn btn-group btn-primary btn-black">注册</button>
+        <a href="./register.html" class="btn btn-group btn-primary btn-black">注册</a>
         </div>
         <div class="navbar-right navbar-form">
         <a href="login.html" class="btn btn-group btn-primary btn-black">登陆</a>
@@ -214,6 +215,9 @@
     </div>
        
         <div class="col-md-4">
+           <div class="well my_well">
+        <script charset="Shift_JIS" src="http://chabudai.sakura.ne.jp/blogparts/honehoneclock/honehone_clock_wh.js"></script>
+        </div>
             <div class="well my_well">
                 <h4><span class="glyphicon glyphicon-time"></span>&nbsp;&nbsp;最近文章</h4>
                 <hr>
