--- a/class_work/webserver.html
+++ b/class_work/webserver.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="./css/video-js.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="login.css">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -30,14 +29,14 @@
         </div>
         <div>
         <ul class="nav navbar-nav">
-            <li class=""><a href="./index.html">主页</a></li>
+            <li><a href="./index.html">主页</a></li>
             <li><a href="./jianli.html">关于我</a></li>
             <li><a href="ftp://115.159.58.102/">资料下载</a></li>
             <li><a href="./messageboard.html">留言板</a></li>
-            <li><a href="webserver.html">后台开发</a></li>
+            <li class="active"><a href="#" >后台开发</a></li>
         </ul>
         <div class="navbar-right navbar-form">
-        <button class="btn btn-group btn-primary btn-black">注册</button>
+        <a href="./register.html" class="btn btn-group btn-primary btn-black">注册</a>
         </div>
         <div class="navbar-right navbar-form">
         <a href="login.html" class="btn btn-group btn-primary btn-black">登陆</a>
@@ -77,33 +76,10 @@
     </div>
     </div>
 </nav>
-    <div class="container container-small">
-         <h1>
-             注册
-         </h1>
-          <form>
-           <div class="form-group">
-               <label>用户名</label>
-               <input type="text" class="form-control">
-           </div>
-           <div class="form-group">
-               <label>密码</label>
-               <input type="password" class="form-control">
-           </div>
-           <div class="form-group">
-               <label>手机/邮箱</label>
-               <input type="text" class="form-control">
-           </div>
-           <div class="form-group">
-               <label>验证码</label>
-               <input type="text" class="form-control">
-           </div>
-           <div class="form-group">
-               <button type="submit" class="btn btn-primary btn-block login_btn">注册</button>
-           </div>
-           
-           </form>
-       </div>
+    <div class="container">     
+        <h1>后台开发路线图</h1>  
+        <img src="./img/track.png" alt="">
+    </div>
     <div class="footer">
         <hr>
         <div class="container">
@@ -111,6 +87,8 @@
                 Powered by: <a href="http://www.bootcss.com/">Bootstrap</a> <a href="http://glyphicons.com/">Glyphicons Halflings</a>
                 <br>
                 Copyright © 2017-2018
+                <br>
+                <script charset="Shift_JIS" src="http://chabudai.sakura.ne.jp/blogparts/honehoneclock/honehone_clock_wh.js"></script>
             </p>
         </div>
     </div>
@@ -123,21 +101,6 @@
     <script>
     videojs.options.flash.swf = "video-js.swf";
     </script>
-    <script>
-       $(function(){
-           $('#ad-carousel').carousel();
-           $('#menu-nav .navbar-collapse a').click(function(e){
-               var href = $(this).attr('href');
-               var tabId = $(this).attr('data-tab');
-               if('#'!==href){
-                   e.preventDefault();
-                   $(document).scrollTop($(href).offset().top - 70);
-                   if(tabId){
-                       $('#feature-tab a[href=#'+tabId +']').tab('show');
-                   }
-               }
-           })
-       })
-    </script>
+    
   </body>
 </html>
